--- a/css/style.css
+++ b/css/style.css
@@ -2,54 +2,181 @@
     --brand-color:#212121;
     --bacraund-color-button:#2196F3;
     --p-color:#757575;
+    --hero-white: #ffffff;
+    --fon:#2F303A;
 }
-/* Hero tags */
+/* King tags */
 body {
     color:#212121;
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+    
 }
 
 .list {
+    text-decoration: none;
     list-style:none;
 }
 
-/* Header seting */
+/* Logo (logo span) */
 
 .logo {
     color: #000;
-}
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    }
 
 .logoweb {
     color: var(--bacraund-color-button);
 }
 
+/* Navigation / Header */
+
+.link {
+    color: var(--brand-color);
+    text-decoration: none;
+}
+
+.link :focus
+.link :hover{
+    color: var(--bacraund-color-button);
+}
+
 .nav-header .link {
     color: var(--brand-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .nav-header .link:focus,
-.nav-header a:hover {
+.nav-header .link:hover {
     color: var(--bacraund-color-button)
 }
 
-.adres-header .link{
+.adres-header a {
     color: var(--p-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
-.adres-header :focus,
-.adres-header :hover {
+.adres-header a:focus,
+.adres-header a:hover {
     color: var(--bacraund-color-button)
 }
+/* Hero */
+
+.hero {
+    background-color: #2F303A;
+}
+
+.hero-text {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--hero-white);
+}
+
+.hero-botton {
+    font-family: 'Roboto';
+    cursor: pointer; 
+    background: var(--bacraund-color-button);
+    border-radius: 4px;
+    color: var(--hero-white);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.8;
+    border: 0;
+}
+.hero-botton :focus,
+.hero-botton :active,
+.hero-botton :hover {
+    background-color: var(--hero-white);
+    color: var(--bacraund-color-button);
+}
+
+
+
+/* .pro-nas  {
+} */
 
 /* main */
 
-/* .hero {
-
-} */
 .size-info h3 {
     color: var(--brand-color);
-    list-style:none;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.4;
+    text-transform: uppercase;
+    color: var(--brand-color);
 }
 
 .size-info p {
     color: var(--p-color);
+    font-size: 14px;
+    line-height: 1.7;
+
+}
+
+/* Portfolio */
+
+.us-work h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    color: var(--brand-color);
+}
+
+.delopers h3 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.delopers p {
+    color: var(--p-color);
+    text-align: center;
+    line-height: 1.16;
+}
+
+
+.botton-filtr {
+    cursor: pointer;
+}
+
+.botton-filtr :focus,
+.botton-filtr :active,
+.botton-filtr :hover {
+    cursor: pointer;
+    background-color: var(--bacraund-color-button);
+    color: aqua;
+}
+
+.logo-footer {
+    color: var(--hero-white);
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+}
+
+.adres-header {
+    font-style:normal;
+}
+
+.adres-header .str {
+    color: var(--hero-white);
+}
+
+footer {
+    background-color: var(--fon)
 }
