--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,19 @@ body {
     color: var(--bacraund-color-button);
 }
 
-/* Navigation / Header */
 
 .link {
     color: var(--brand-color);
-    text-decoration: none;
+    text-decoration:none;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+}
+.link:hover {
+    color: var(--bacraund-color-button);
 }
 
-.link :focus
-.link :hover{
+.active {
     color: var(--bacraund-color-button);
 }
 
@@ -84,7 +88,9 @@ body {
     color: var(--hero-white);
 }
 
-button {
+/* Button all */
+
+.hero-button {
     font-family: 'Roboto';
     cursor: pointer; 
     background: var(--bacraund-color-button);
@@ -95,19 +101,39 @@ button {
     line-height: 1.8;
     border: 0;
 }
-button :hover {
+
+.hero-button:focus,
+.hero-button:hover {
     background-color: var(--hero-white);
     color: var(--bacraund-color-button);
 }
 
+/* Button filtr */
 
+.botton-filtr {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    color: var(--brand-color);
+    text-align: center;
+    border: 0;
+    background-color: var(--hero-white);
+    border-radius: 4px;
+}
+
+.botton-filtr:focus, 
+.botton-filtr:hover {
+    background-color: var(--bacraund-color-button);
+    color: var(--hero-white);
+
+}
 
 /* .pro-nas  {
 } */
+/* TEXT MAIN */
 
-/* main */
-
-.size-info h3 {
+.size-info {
     color: var(--brand-color);
     font-weight: 700;
     font-size: 14px;
@@ -116,7 +142,7 @@ button :hover {
     color: var(--brand-color);
 }
 
-.size-info p {
+.size-info-p {
     color: var(--p-color);
     font-size: 14px;
     line-height: 1.7;
@@ -125,7 +151,7 @@ button :hover {
 
 /* Portfolio */
 
-.us-work h2 {
+.us-work {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -133,26 +159,23 @@ button :hover {
     color: var(--brand-color);
 }
 
-.delopers h3 {
+.delopers {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
+    line-height: 1.18;
 }
 
-.delopers p {
+.delopers-p {
+    font-size: 16px;
+    line-height: 1.9;
     color: var(--p-color);
-    text-align: center;
-    line-height: 1.16;
 }
-
 
 .botton-filtr {
     cursor: pointer;
 }
 
 .botton-filtr :focus,
-.botton-filtr :active,
 .botton-filtr :hover {
     cursor: pointer;
     background-color: var(--bacraund-color-button);
@@ -175,6 +198,60 @@ button :hover {
     color: var(--hero-white);
 }
 
-footer {
+.footer {
     background-color: var(--fon)
 }
+
+/* Menu portfolio */
+
+.menu-p {
+    color: var(--p-color);
+    font-size: 16px;
+    line-height: 1.87;
+    text-decoration:none;
+}
+
+.menu-h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.77;
+    letter-spacing: 0.06em;
+    list-style:none;
+    text-decoration:none;
+    color: var(--brand-color);
+}
+
+.filtr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+     
+}
+
+/* .menu-tehno:hover {
+    background-color: var(--bacraund-color-button);
+}
+.menu-restoran:hover {
+    background-color: var(--bacraund-color-button); 
+}
+.menu-market:hover {
+    background-color: var(--bacraund-color-button); 
+}
+.menu-proekt:hover {
+    background-color: var(--bacraund-color-button); 
+}
+.menu-disayn:hover {
+    background-color: var(--bacraund-color-button);
+}
+.menu-web:hover  {
+    background-color: var(--bacraund-color-button);
+}
+.menu-limited:hover  {
+    background-color: var(--bacraund-color-button);
+}
+.menu-mark:hover  {
+    background-color: var(--bacraund-color-button);
+}
+.menu-busines:hover  {
+    background-color: var(--bacraund-color-button);
+} */
