--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,32 @@
     --hero-white: #ffffff;
     --fon:#2F303A;
 }
+
+
+
 /* King tags */
+
+
 body {
-    color:#212121;
+    color:var(--p-color);
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
-    
+    font-size: 14px;
 }
+
 
 .list {
     text-decoration: none;
     list-style:none;
 }
 
+
+
+
 /* Logo (logo span) */
 
 .logo {
-    color: #000;
+    color: var(--brand-color);
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -37,7 +46,8 @@ body {
     color: var(--brand-color);
     text-decoration:none;
     font-weight: 500;
-    line-height: 16px;
+    line-height: 1.14;
+    font-size: 14px;
     letter-spacing: 0.02em;
 }
 .link:hover {
@@ -69,11 +79,25 @@ body {
     letter-spacing: 0.02em;
 }
 
+.adres-footer {
+    color: var(--p-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    font-style:normal;
+}
+
+.adres-footer:hover {
+    color: var(--bacraund-color-button);
+}
+
 .adres-header a:focus,
 .adres-header a:hover {
     color: var(--bacraund-color-button)
 }
-/* Hero */
+
+
+/* Hero  block */
 
 .hero {
     background-color: #2F303A;
@@ -86,9 +110,13 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--hero-white);
+    text-transform: uppercase;
 }
 
-/* Button all */
+
+
+/* Button Hero */
+
 
 .hero-button {
     font-family: 'Roboto';
@@ -100,6 +128,7 @@ body {
     font-size: 16px;
     line-height: 1.8;
     border: 0;
+    letter-spacing: 0.06em
 }
 
 .hero-button:focus,
@@ -120,6 +149,7 @@ body {
     border: 0;
     background-color: var(--hero-white);
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .botton-filtr:focus, 
@@ -129,8 +159,15 @@ body {
 
 }
 
-/* .pro-nas  {
-} */
+.botton-filtr :focus,
+.botton-filtr :hover {
+    cursor: pointer;
+    background-color: var(--bacraund-color-button);
+    color: aqua;
+}
+
+
+
 /* TEXT MAIN */
 
 .size-info {
@@ -139,13 +176,13 @@ body {
     font-size: 14px;
     line-height: 1.4;
     text-transform: uppercase;
-    color: var(--brand-color);
 }
 
 .size-info-p {
     color: var(--p-color);
     font-size: 14px;
     line-height: 1.7;
+    font-weight: normal;
 
 }
 
@@ -162,25 +199,17 @@ body {
 .delopers {
     font-weight: 500;
     font-size: 16px;
+    color: var(--brand-color);
     line-height: 1.18;
 }
 
 .delopers-p {
     font-size: 16px;
+    font-weight: 400;
     line-height: 1.9;
-    color: var(--p-color);
 }
 
-.botton-filtr {
-    cursor: pointer;
-}
 
-.botton-filtr :focus,
-.botton-filtr :hover {
-    cursor: pointer;
-    background-color: var(--bacraund-color-button);
-    color: aqua;
-}
 
 .logo-footer {
     color: var(--hero-white);
@@ -190,12 +219,13 @@ body {
     line-height: 1.2;
 }
 
-.adres-header {
+.str {
+    color: var(--hero-white);
     font-style:normal;
 }
 
-.adres-header .str {
-    color: var(--hero-white);
+.str:hover {
+    color: var(--bacraund-color-button);
 }
 
 .footer {
@@ -206,12 +236,12 @@ body {
 
 .menu-p {
     color: var(--p-color);
+    font-weight: normal;
     font-size: 16px;
     line-height: 1.87;
-    text-decoration:none;
 }
 
-.menu-h3 {
+.menu-h2 {
     font-weight: 700;
     font-size: 18px;
     line-height: 1.77;
@@ -222,36 +252,6 @@ body {
 }
 
 .filtr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-     
+ 
+     display: none;
 }
-
-/* .menu-tehno:hover {
-    background-color: var(--bacraund-color-button);
-}
-.menu-restoran:hover {
-    background-color: var(--bacraund-color-button); 
-}
-.menu-market:hover {
-    background-color: var(--bacraund-color-button); 
-}
-.menu-proekt:hover {
-    background-color: var(--bacraund-color-button); 
-}
-.menu-disayn:hover {
-    background-color: var(--bacraund-color-button);
-}
-.menu-web:hover  {
-    background-color: var(--bacraund-color-button);
-}
-.menu-limited:hover  {
-    background-color: var(--bacraund-color-button);
-}
-.menu-mark:hover  {
-    background-color: var(--bacraund-color-button);
-}
-.menu-busines:hover  {
-    background-color: var(--bacraund-color-button);
-} */
